fix(_static/css): Fix MathJax vertical scrollbar

--- a/docs/_static/css/extra.css
+++ b/docs/_static/css/extra.css
@@ -1,14 +1,18 @@
 [data-md-color-scheme="slate"] {
-    --md-primary-fg-color: #2e303e;
-    --md-accent-fg-color: #00bda4;
-    --md-typeset-a-color: #526cfe;
+  --md-primary-fg-color: #2e303e;
+  --md-accent-fg-color: #00bda4;
+  --md-typeset-a-color: #526cfe;
 }
-  
+
 [data-md-color-scheme="slate"] .md-typeset img {
-    background: white;
-    filter: brightness(0.9);
+  background: white;
+  filter: brightness(0.9);
 }
-  
+
 [data-md-color-scheme="slate"] .md-typeset img[src$=".svg"] {
-    border: 4px solid white;
+  border: 4px solid white;
+}
+
+.md-typeset div.arithmatex {
+  overflow: initial;
 }
